--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@mantine/notifications": "^7.13.4",
     "@prisma/client": "^5.22.0",
     "@tabler/icons-react": "^3.21.0",
+    "bcryptjs": "^2.4.3",
     "lodash": "^4.17.21",
     "next": "15.0.2",
+    "next-auth": "^5.0.0-beta.25",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "eslint": "^8",
