--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@ certificates
 *.xml
 *.idea
 .idea
+
+# Keep the generated Prisma Client + query engine out of version control
+/src/generated/prisma
