--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --experimental-https",
+    "dev": "next dev --turbo --experimental-https",
     "build": "next build",
     "start": "next start",
     "start-https": "next start --experimental-https",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "node prisma/seed.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "postinstall": "echo 'Installation completed with legacy peer deps'"
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
@@ -18,6 +23,7 @@
     "@mantine/notifications": "^7.17.5",
     "@prisma/client": "^6.6.0",
     "@tabler/icons-react": "^3.21.0",
+    "bcrypt": "^5.1.1",
     "lodash": "^4.17.21",
     "next": "15.3.1",
     "react": "19.1",
@@ -25,8 +31,14 @@
     "swr": "^2.3.3"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^15.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "msw": "^2.2.3",
     "prettier": "3.5.3",
     "prisma": "^6.6.0"
   }
